# vipps-python

./: Dockerfile  LICENSE  README.md  setup.cfg
.github/workflows/: main.yml
tests/: tests_vipps.py
vipps/: __init__.py  vipps_api.py
