# setup.cfg
[metadata]
name = vipps
version = 0.3
author = Almaz Kunpeissov
author_email = hi@akun.dev
description = Python bindings for the Vipps API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/almazkun/vipps-python
keywords = vipps api payments
license = MIT License
license_files = LICENSE
project_urls =
    Documentation = https://github.com/almazkun/vipps-python
    Source = https://github.com/almazkun/vipps-python
    Tracker = https://github.com/almazkun/vipps-python/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.7
include_package_data = true
zip_safe = false
install_requires = requests >= 2

[options.packages.find]
exclude =
    tests
    tests.*